--- a/css/responsivity.css
+++ b/css/responsivity.css
@@ -108,10 +108,16 @@
         padding-bottom: 1rem;
     }
 
-    .mobile-nav {
+    .mobile-nav li {
         display: block;
-        padding-top: 1.2rem;
-        padding: 1rem;
+    }
+
+    .menu-icon {
+        width: 100%;
+    }
+
+    .open {
+        display: block;
     }
 
     a {
