--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Gabarito', cursive;
+    font-family: "Gabarito", cursive;
     box-sizing: border-box;
 }
 
@@ -46,13 +46,13 @@ header h1 {
     padding: 0px 20px;
 }
 
-
 .nav-links li a {
     transition: all 0.2s ease-in-out 0s;
 }
 
 .nav-links li a:hover {
     color: #2cc762;
+    text-decoration: none;
 }
 
 button {
